--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>My Portfolio</title>
     <!-- Link to styles.CSS file -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
@@ -106,5 +106,8 @@
     <footer>
         <p>&copy; 2024 Aryan Dharangaonkar. All Rights Reserved.</p>
     </footer>
+
+    <script src="js/main.js"></script>
+
 </body>
 </html>
