--- a/index.html
+++ b/index.html
@@ -61,26 +61,27 @@
     <section id="projects" data-aos="fade-up">
         <h2>Projects</h2>
         <div class="projects-container">
-            <div class="project" onclick="openModal('project1-modal')">
+            <a href="https://github.com/aryan-dhar/HowdyHack24" target="_blank" class="project">
                 <img src="images/project1_thumbnail.jpg" alt="Project 1" class="project-image">
-                <h3>HowdyHelp</h3>
+                <h3>Project 1</h3>
                 <p>Description of the project.</p>
-            </div>
-            <div class="project" onclick="openModal('project2-modal')">
+            </a>
+            <a href="https://github.com/aryan-dhar/my-portfolio" target="_blank" class="project">
                 <img src="images/project2_thumbnail.jpg" alt="Project 2" class="project-image">
-                <h3>Personal Portfolio</h3>
-                <p>The website you're on right now!!</p>    
-            </div>
-            <div class="project" onclick="openModal('project3-modal')">
-                <img src="images/project3_thumbnail.jpg" alt="Project 3" class="project-image">
-                <h3>Pente Game</h3>
+                <h3>Project 2</h3>
                 <p>Description of the project.</p>
-            </div>
+            </a>
+            <a href="https://github.com/aryan-dhar/College-Projects" target="_blank" class="project">
+                <img src="images/project3_thumbnail.jpg" alt="Project 3" class="project-image">
+                <h3>Project 3</h3>
+                <p>Description of the project.</p>
+            </a>
         </div>
         <div class="view-all">
             <a href="https://github.com/aryan-dhar" target="_blank" class="btn">View All Projects &#x2192;</a>
         </div>
     </section>
+
 
     <!-- Project Modal Templates -->
     <div id="project1-modal" class="modal">
@@ -120,10 +121,47 @@
         <div class="skill">
             <i class="fab fa-js-square"></i> JavaScript
             <div class="skill-bar">
+                <div class="skill-level" style="width: 40%;"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <i class="fas fa-database"></i> MongoDB
+            <div class="skill-bar">
+                <div class="skill-level" style="width: 35%;"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <i class="fas fa-server"></i> Mongoose
+            <div class="skill-bar">
+                <div class="skill-level" style="width: 20%;"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <i class="fas fa-server"></i> Express.js
+            <div class="skill-bar">
+                <div class="skill-level" style="width: 20%;"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <i class="fab fa-java"></i> Java
+            <div class="skill-bar">
+                <div class="skill-level" style="width: 65%;"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <i class="fas fa-cogs"></i> C++
+            <div class="skill-bar">
                 <div class="skill-level" style="width: 80%;"></div>
             </div>
         </div>
+        <div class="skill">
+            <i class="fab fa-node-js"></i> Node.js
+            <div class="skill-bar">
+                <div class="skill-level" style="width: 40%;"></div>
+            </div>
+        </div>
     </section>
+
 
     <!-- Resume Section -->
     <section id="resume" data-aos="fade-up">
@@ -138,7 +176,7 @@
         <h2>Contact Me</h2>
         <div class="contact-content">
             <p>If you'd like to get in touch, feel free to reach out using the form below or via email at <a href="mailto:aryandhar1900@gmail.com">aryandhar1900@gmail.com</a>.</p>
-            <form id="contact-form" action="https://formspree.io/f/{your-form-id}" method="POST">
+            <form id="contact-form" action="https://formspree.io/f/mqakaqov" method="POST">
                 <label for="name">Your Name:</label>
                 <input type="text" id="name" name="name" required>
                 <label for="email">Your Email:</label>
