--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             <img src="images/profile_pic.jpg" alt="Aryan Dharangaonkar" class="profile-photo">
             <div class="bio">
                 <h3>Aryan Dharangaonkar</h3>
-                <p>Hello! My name is Aryan Dharangaonkar, and I am a student at Texas A&M with a passion for Software Engineering...</p>
+                <p>Hello! My name is Aryan Dharangaonkar, and I am a student at Texas A&M with a passion for Software Engineering. I am currently working towards completing the 
+                    Cisco Certified Network Associate (CCNA) Certification. </p>
             </div>
         </div>
     </section>
@@ -63,17 +64,17 @@
         <div class="projects-container">
             <a href="https://github.com/aryan-dhar/HowdyHack24" target="_blank" class="project">
                 <img src="images/project1_thumbnail.jpg" alt="Project 1" class="project-image">
-                <h3>Project 1</h3>
+                <h3>HowdyHelp</h3>
                 <p>Description of the project.</p>
             </a>
             <a href="https://github.com/aryan-dhar/my-portfolio" target="_blank" class="project">
                 <img src="images/project2_thumbnail.jpg" alt="Project 2" class="project-image">
-                <h3>Project 2</h3>
+                <h3>Personal Portfolio</h3>
                 <p>Description of the project.</p>
             </a>
             <a href="https://github.com/aryan-dhar/College-Projects" target="_blank" class="project">
                 <img src="images/project3_thumbnail.jpg" alt="Project 3" class="project-image">
-                <h3>Project 3</h3>
+                <h3>Pente Game</h3>
                 <p>Description of the project.</p>
             </a>
         </div>
@@ -84,30 +85,7 @@
 
 
     <!-- Project Modal Templates -->
-    <div id="project1-modal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('project1-modal')">&times;</span>
-            <h2>Project 1</h2>
-            <p>Detailed information about Project 1. You can describe the technologies, features, and other aspects here.</p>
-            <a href="#">View Live Project</a>
-        </div>
-    </div>
-    <div id="project2-modal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('project2-modal')">&times;</span>
-            <h2>Project 2</h2>
-            <p>Detailed information about Project 2. You can describe the technologies, features, and other aspects here.</p>
-            <a href="#">View Live Project</a>
-        </div>
-    </div>
-    <div id="project3-modal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('project3-modal')">&times;</span>
-            <h2>Project 3</h2>
-            <p>Detailed information about Project 3. You can describe the technologies, features, and other aspects here.</p>
-            <a href="#">View Live Project</a>
-        </div>
-    </div>
+    
 
     <!-- Skills Section -->
     <section id="skills" data-aos="fade-up">
