--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>My Portfolio</title>
+    <title>Aryan Dharangaonkar -- My Portfolio</title>
     <!-- Link to your main CSS file -->
     <link rel="stylesheet" href="css/styles.css">
     <!-- Include Font Awesome for icons -->
@@ -59,29 +59,32 @@
     </section>
 
     <!-- Projects Section -->
+    <!-- Projects Section -->
     <section id="projects" data-aos="fade-up">
         <h2>Projects</h2>
         <div class="projects-container">
+            <!-- Project 1 -->
             <a href="https://github.com/aryan-dhar/HowdyHack24" target="_blank" class="project">
-                <img src="images/project1_thumbnail.jpg" alt="Project 1" class="project-image">
+                <img src="images/project1_thumbnail.jpg" alt="HowdyHelp" class="project-image">
                 <h3>HowdyHelp</h3>
-                <p>Description of the project.</p>
+                <p>HowdyHelp is a full-stack web application that serves as an anonymized peer support forum focusing on mental health. Built using Node.js, Express, MongoDB, and more.</p>
             </a>
-            <a href="https://github.com/aryan-dhar/my-portfolio" target="_blank" class="project">
-                <img src="images/project2_thumbnail.jpg" alt="Project 2" class="project-image">
-                <h3>Personal Portfolio</h3>
-                <p>Description of the project.</p>
-            </a>
-            <a href="https://github.com/aryan-dhar/College-Projects" target="_blank" class="project">
-                <img src="images/project3_thumbnail.jpg" alt="Project 3" class="project-image">
-                <h3>Pente Game</h3>
-                <p>Description of the project.</p>
+
+            <!-- Project 2 -->
+            <a href="computer-vision.html" target="_blank" class="project">
+                <img src="images/project2_thumbnail.jpg" alt="Computer Vision Project" class="project-image">
+                <h3>Computer Vision Project</h3>
+                <p>This project explores the power of computer vision techniques. Click to learn more about the journey and implementation details.</p>
             </a>
         </div>
+        <!-- View All Projects Button -->
         <div class="view-all">
             <a href="https://github.com/aryan-dhar" target="_blank" class="btn">View All Projects &#x2192;</a>
         </div>
     </section>
+
+
+
 
 
     <!-- Project Modal Templates -->
