--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="hero-content">
         <h1>Hello, I'm Aryan Dharangaonkar</h1>
-        <p>Aspiring Software Engineer & Web Developer</p>
+        <p>Aspiring Embedded Software Engineer</p>
         <a href="#projects" class="btn">View My Work</a>
     </div>
 </section>
@@ -52,7 +52,7 @@
             <img src="images/profile_pic.jpg" alt="Aryan Dharangaonkar" class="profile-photo">
             <div class="bio">
                 <h3>Aryan Dharangaonkar</h3>
-                <p>Hello! My name is Aryan Dharangaonkar, and I am a student at Texas A&M with a passion for Software Engineering. I am currently working towards completing the 
+                <p>Hello! My name is Aryan Dharangaonkar, and I am a student at Texas A&M with a passion for Engineering. I am currently working towards completing the 
                     Cisco Certified Network Associate (CCNA) Certification. </p>
             </div>
         </div>
