--- a/computer-vision.html
+++ b/computer-vision.html
@@ -40,8 +40,8 @@
 
             <!-- Image 1 with View Code Button -->
             <div class="project-image-section">
-                <img src="images/finger-count-attempt.jpg" alt="Initial Attempt Example">
-                <a href="https://github.com/aryan-dhar/finger-count-detection" target="_blank" class="btn">View Code</a>
+                <img src="images/initialOptimization.png" alt="Initial Attempt Example">
+                <a href="https://github.com/aryan-dhar/finger-count-detection/blob/main/firstFingers.py" target="_blank" class="btn">View Code</a>
             </div>
 
             <h3>Integrating cvzone</h3>
@@ -58,8 +58,8 @@
 
             <!-- Image 2 with View Code Button -->
             <div class="project-image-section">
-                <img src="images/finger-count-final.jpg" alt="Final Optimization Example">
-                <a href="https://github.com/aryan-dhar/finger-count-detection" target="_blank" class="btn">View Code</a>
+                <img src="images/finalOptimization.png" alt="Final Optimization Example">
+                <a href="https://github.com/aryan-dhar/finger-count-detection/blob/main/fingers.py" target="_blank" class="btn">View Code</a>
             </div>
 
             <h2>Challenges and How I Overcame Them</h2>
