--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
             <!-- Project 2 -->
             <a href="computer-vision.html" target="_blank" class="project">
-                <img src="images/project2_thumbnail.jpg" alt="Computer Vision Project" class="project-image">
+                <img src="images/opencvprojectcover.png" alt="Computer Vision Project" class="project-image">
                 <h3>Computer Vision Project</h3>
                 <p>This project explores the power of computer vision techniques. Click to learn more about the journey and implementation details.</p>
             </a>
