--- a/index.html
+++ b/index.html
@@ -58,30 +58,46 @@
         </div>
     </section>
 
-    <!-- Projects Section -->
-    <!-- Projects Section -->
-    <section id="projects" data-aos="fade-up">
-        <h2>Projects</h2>
-        <div class="projects-container">
-            <!-- Project 1 -->
-            <a href="https://github.com/aryan-dhar/HowdyHack24" target="_blank" class="project">
-                <img src="images/project1_thumbnail.jpg" alt="HowdyHelp" class="project-image">
-                <h3>HowdyHelp</h3>
-                <p>HowdyHelp is a full-stack web application that serves as an anonymized peer support forum focusing on mental health. Built using Node.js, Express, MongoDB, and more.</p>
-            </a>
 
-            <!-- Project 2 -->
-            <a href="computer-vision.html" target="_blank" class="project">
-                <img src="images/opencvprojectcover.png" alt="Computer Vision Project" class="project-image">
-                <h3>Computer Vision Project</h3>
-                <p>This project explores the power of computer vision techniques. Click to learn more about the journey and implementation details.</p>
-            </a>
-        </div>
-        <!-- View All Projects Button -->
-        <div class="view-all">
-            <a href="https://github.com/aryan-dhar" target="_blank" class="btn">View All Projects &#x2192;</a>
-        </div>
-    </section>
+
+    <!-- Projects Section -->
+<section id="projects" data-aos="fade-up">
+    <h2>Projects</h2>
+    <div class="projects-container">
+        <!-- Project 1 -->
+        <a href="https://github.com/aryan-dhar/HowdyHack24" target="_blank" class="project">
+            <img src="images/project1_thumbnail.jpg" alt="HowdyHelp" class="project-image">
+            <h3>HowdyHelp</h3>
+            <p>HowdyHelp is a full-stack web application that serves as an anonymized peer support forum focusing on mental health. Built using Node.js, Express, MongoDB, and more.</p>
+        </a>
+
+        <!-- Project 2 -->
+        <a href="computer-vision.html" target="_blank" class="project">
+            <img src="images/opencvprojectcover.png" alt="Computer Vision Project" class="project-image">
+            <h3>Computer Vision Project</h3>
+            <p>This project explores the power of computer vision techniques. Click to learn more about the journey and implementation details.</p>
+        </a>
+
+        <!-- Project 3 -->
+        <a href="robot.html" target="_blank" class="project">
+            <img src="images/robotprojectcover.jpg" alt="Robot Sorting System" class="project-image">
+            <h3>Robot Sorting System</h3>
+            <p>A Raspberry Pi-controlled robot equipped with a camera to detect and sort blocks by color. Uses computer vision to identify red, green, and blue blocks.</p>
+        </a>
+
+        <!-- Project 4 -->
+        <a href="networkSystem.html" target="_blank" class="project">
+            <img src="images/networksystemprojectcover.jpg" alt="Network System Project" class="project-image">
+            <h3>Network Monitoring System</h3>
+            <p>Designed a network monitoring system using Cisco Packet Tracer and Python. Analyzed traffic flow and identified network vulnerabilities.</p>
+        </a>
+    </div>
+    <!-- View All Projects Button -->
+    <div class="view-all">
+        <a href="https://github.com/aryan-dhar" target="_blank" class="btn">View All Projects &#x2192;</a>
+    </div>
+</section>
+
 
 
 
