--- a/robot.html
+++ b/robot.html
@@ -13,6 +13,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <!-- Header -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <!-- Blog Post Section -->
     <section id="robot-page" class="blog-post">
         <div class="container">
